--- a/.github/workflows/ci-dockerhub.yml
+++ b/.github/workflows/ci-dockerhub.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: navaneetha22
+          username: naveen4251
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image
@@ -57,5 +57,3 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64
-
-          
